Fix test on Java 17 for new groovy.